--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@reswagger/components",
+  "main": "src/index.js",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@reswagger/webpack": "1.0.0",
-    "@reswagger/plugins": "1.0.0"
+    "@reswagger/webpack": "1.0.0"
   },
   "scripts": {
     "start": "cross-env PORT=3004 BROWSER=none rp-scripts start",
