--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "cross-env": "5.2.0",
     "lerna": "3.15.0",
     "lodash": "4.17.15",
+    "lucene-filter": "0.1.3",
+    "lucene-query-parser": "1.2.0",
     "moment": "2.24.0",
     "normalize.css": "4.1.1",
     "prop-types": "15.7.2",
