--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "5.1.1",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
+    "react-copy-to-clipboard": "5.0.2",
     "redux": "4.0.1",
     "request": "2.88.0",
     "request-promise-native": "1.0.7",
