--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@reswagger/webpack",
+  "name": "@clubmed/webpack",
   "version": "1.0.0",
   "description": "Configuration and scripts for React App",
   "license": "MIT",
