--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@reswagger/components",
+  "name": "@clubmed/components",
   "main": "src/index.js",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@reswagger/webpack": "1.0.0",
+    "@clubmed/webpack": "1.0.0",
     "shortid": "^2.2.15"
   },
   "scripts": {
