--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@reswagger/eslint-config",
+  "name": "@clubmed/eslint-config",
   "version": "1.0.0",
   "description": "clubmed® eslint rules & configurations",
   "author": "CLUBMED",
