--- a/packages/plugins/.eslintrc
+++ b/packages/plugins/.eslintrc
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "@reswagger",
-    "@reswagger/eslint-config/react"
+    "@clubmed",
+    "@clubmed/eslint-config/react"
   ]
 }
