--- a/packages/utils/.eslintrc
+++ b/packages/utils/.eslintrc
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "@reswagger",
-    "@reswagger/eslint-config/react"
+    "@clubmed",
+    "@clubmed/eslint-config/react"
   ]
 }
