fix(swagger-ui): Fix problem with input parameters

--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "private": true,
   "dependencies": {
-    "check-prop-types": "1.1.2",
     "classnames": "2.2.6",
-    "connected-react-router": "4.5.0",
     "cross-env": "5.2.0",
     "lerna": "3.15.0",
     "lodash": "4.17.15",
@@ -16,17 +14,14 @@
     "moment": "2.24.0",
     "normalize.css": "4.1.1",
     "prop-types": "15.7.2",
-    "react": "16.8.6",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-app-polyfill": "1.0.1",
     "react-copy-to-clipboard": "5.0.2",
-    "react-dom": "16.8.6",
-    "react-redux": "5.1.1",
-    "react-router": "4.3.1",
-    "react-router-dom": "4.3.1",
-    "redux": "4.0.1",
+    "swagger-ui-react": "3.25.0",
     "request": "2.88.0",
     "request-promise-native": "1.0.7",
-    "swagger-ui": "^3.25.0"
+    "highlight.js": "10.0.3"
   },
   "devDependencies": {
     "babel-eslint": "10.0.3",
@@ -63,7 +58,6 @@
     "build:swagger": "cross-env PUBLIC_URL=${BASE_URL}/swagger-ui lerna run build --stream --scope @clubmed/swagger-ui",
     "build:features": "lerna run build --stream --scope @clubmed/features-and-fix",
     "start:swagger": "lerna run start --stream --no-prefix --scope @clubmed/swagger-ui",
-    "start:storybook": "cross-env NODE_ENV=development lerna run start:storybook --stream --parallel",
     "test": "cross-env CI=true lerna run test --concurrency 2 -- --passWithNoTests",
     "lint:fix": "lerna run lint:fix --parallel",
     "start:prod": "serve",
