--- a/packages/features-and-fix/package.json
+++ b/packages/features-and-fix/package.json
@@ -10,9 +10,9 @@
     "vue-toastr": "2.1.2"
   },
   "scripts": {
-    "start": "cross-env PORT=3006 BROWSER=none rp-scripts start",
-    "build": "rp-scripts build",
-    "test": "rp-scripts test --coverage",
+    "start": "cross-env PORT=3006 BROWSER=none cm-scripts start",
+    "build": "cm-scripts build",
+    "test": "cm-scripts test --coverage",
     "lint:fix": "yarn lint --fix",
     "lint": "eslint --config .eslintrc --cache --quiet \"./src/**/*.{js,jsx}\""
   },
