--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -9,9 +9,9 @@
     "striptags": "3.1.1"
   },
   "scripts": {
-    "start": "cross-env PORT=3004 BROWSER=none rp-scripts start",
-    "build": "rp-scripts build",
-    "test": "rp-scripts test --coverage",
+    "start": "cross-env PORT=3004 BROWSER=none cm-scripts start",
+    "build": "cm-scripts build",
+    "test": "cm-scripts test --coverage",
     "lint:fix": "yarn lint --fix",
     "lint": "eslint --config .eslintrc --cache --quiet \"./src/**/*.{js,jsx}\""
   },
