--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
   - CXX=g++-4.8 TZ=GMT
 
 before_install:
-  - npm install -g yarn@1.21.0
+  - npm install -g yarn@1.22.4
 
 install:
   - yarn install --frozen-lockfile
@@ -29,16 +29,17 @@ jobs:
     # STAGE: RELEASE
     #######################################################################
     - stage: deploy
-      if: branch = production
+      if: branch = master
       name: 'Release new version'
-      script: bash ./scripts/travis/run-create-release.sh
+      env:
+        - GITHUB_PAGES_PATH=./dist
+      script:
+        - cd dist && rm -rf .git && cd ..
+        - yarn add -W -D https://${GH_TOKEN}@github.com/ClubMediterranee/cmflow#v0.60.7 --frozen-lockfile
+        - git checkout -- package.json
+        - yarn release
 stages:
-  - test
   - deploy
-
-branches:
-  except:
-    - master
 
 addons:
   apt:
