--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "private": true,
+  "repository": {
+    "url": "https://github.com/ClubMediterranee/swagger.git"
+  },
   "dependencies": {
     "classnames": "2.2.6",
     "cross-env": "5.2.0",
@@ -25,8 +28,6 @@
   },
   "devDependencies": {
     "babel-eslint": "10.0.3",
-    "conventional-changelog": "3.1.8",
-    "conventional-changelog-cli": "2.0.21",
     "eslint": "6.1.0",
     "eslint-config-react-app": "5.0.2",
     "eslint-config-standard": "12.0.0",
@@ -44,7 +45,6 @@
     "eslint-plugin-should-promised": "2.0.0",
     "eslint-plugin-standard": "4.0.0",
     "fs-extra": "7.0.1",
-    "gflow": "^5.0.2",
     "husky": "1.3.1",
     "lint-staged": "8.2.0"
   },
@@ -61,7 +61,8 @@
     "test": "cross-env CI=true lerna run test --concurrency 2 -- --passWithNoTests",
     "lint:fix": "lerna run lint:fix --parallel",
     "start:prod": "serve",
-    "generate:changelog": "conventional-changelog --preset angular --release-count 0 --outfile ./CHANGELOG.md && lerna exec --concurrency 1 --stream -- 'conventional-changelog --preset angular --release-count 0 --commit-path $PWD --pkg $PWD/package.json --outfile $PWD/CHANGELOG.md'\n"
+    "release": "cmrelease",
+    "release:dryrun": "cmrelease --dry-run"
   },
   "author": "Lenzotti Romain",
   "license": "ISC",
