fix: Build with circle-ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
   deploy:
     machine: true
     environment:
+      BASE_URL: "https://clubmediterranee.github.io/swagger/latest"
       GITHUB_PAGES_PATH: "./dist"
     steps:
       - checkout
