--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -65,7 +65,7 @@
     "pnp-webpack-plugin": "1.5.0",
     "postcss-apply": "0.12.0",
     "postcss-at-rules-variables": "^0.1.9",
-    "postcss-calc": "latest",
+    "postcss-calc": "^7.0.4",
     "postcss-color-function": "4.1.0",
     "postcss-each": "0.10.0",
     "postcss-flexbugs-fixes": "4.1.0",
