--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "swagger-ui-react": "3.34.0"
   },
   "devDependencies": {
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
+    "enzyme-to-json": "3.4.4",
+    "http-proxy-middleware": "1.0.3",
+    "redux-mock-store": "1.5.4",
     "babel-eslint": "10.0.3",
     "eslint": "6.1.0",
     "eslint-config-react-app": "5.0.2",
@@ -44,6 +49,8 @@
     "eslint-plugin-react-hooks": "1.6.1",
     "eslint-plugin-should-promised": "2.0.0",
     "eslint-plugin-standard": "4.0.0",
+    "jest-junit": "11.0.1",
+    "junit": "^1.4.9",
     "fs-extra": "7.0.1",
     "husky": "1.3.1",
     "lint-staged": "8.2.0"
@@ -59,7 +66,10 @@
     "build:features": "lerna run build --stream --scope @clubmed/features-and-fix",
     "start:swagger": "lerna run start --stream --no-prefix --scope @clubmed/swagger-ui",
     "test": "cross-env CI=true lerna run test --concurrency 2 -- --passWithNoTests",
+    "test:ci": "cross-env CI=true lerna run test:ci --concurrency 2 -- --passWithNoTests",
     "lint:fix": "lerna run lint:fix --parallel",
+    "lint:ci": "cross-env NODE_ENV=travis CI=true lerna run lint:ci --parallel",
+    "lint": "cross-env NODE_ENV=travis CI=true lerna run lint --parallel",
     "start:prod": "serve",
     "release": "cmrelease",
     "release:dryrun": "cmrelease --dry-run"
