--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -12,7 +12,9 @@
     "start": "cross-env PORT=3004 BROWSER=none cm-scripts start",
     "build": "cm-scripts build",
     "test": "cm-scripts test --coverage",
+    "test:ci": "yarn test",
     "lint:fix": "yarn lint --fix",
+    "lint:ci": "yarn lint --format junit --output-file ../../reports/test-results-components-lint.xml",
     "lint": "eslint --config .eslintrc --cache --quiet \"./src/**/*.{js,jsx}\""
   },
   "browserslist": {
