--- a/packages/swagger-ui/package.json
+++ b/packages/swagger-ui/package.json
@@ -14,7 +14,9 @@
     "start": "cross-env PORT=8083 BROWSER=none cm-scripts start",
     "build": "cm-scripts build",
     "test": "cm-scripts test --coverage",
+    "test:ci": "yarn test",
     "lint:fix": "yarn lint --fix",
+    "lint:ci": "yarn lint --format junit --output-file ../../reports/test-results-swaggerui-lint.xml",
     "lint": "eslint --config .eslintrc --cache --quiet \"./src/**/*.{js,jsx}\""
   },
   "browserslist": {
