--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "fibers": "5.0.0",
     "file-loader": "3.0.1",
     "find-up": "3.0.0",
     "fs-extra": "8.1.0",
@@ -60,7 +61,6 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
     "mini-css-extract-plugin": "0.8.0",
-    "node-sass": "4.13.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-apply": "0.12.0",
@@ -82,7 +82,8 @@
     "react-dev-utils": "9.1.0",
     "react-svg": "10.0.23",
     "resolve-url-loader": "3.1.0",
-    "sass-loader": "7.2.0",
+    "sass": "1.29.0",
+    "sass-loader": "10.1.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
     "tailwind": "4.0.0",
