--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/ClubMediterranee/swagger.git"
   },
   "dependencies": {
+    "brace": "0.11.1",
     "classnames": "2.2.6",
     "cross-env": "5.2.0",
     "lerna": "3.15.0",
@@ -21,7 +22,8 @@
     "react-app-polyfill": "1.0.1",
     "react-copy-to-clipboard": "5.0.2",
     "react-dom": "16.13.1",
-    "react-json-editor-ajrm": "2.5.10",
+    "jsoneditor": "9.1.5",
+    "jsoneditor-react": "3.1.0",
     "request": "2.88.0",
     "request-promise-native": "1.0.7",
     "swagger-ui-react": "3.34.0"
