--- a/package.json
+++ b/package.json
@@ -2,71 +2,51 @@
   "name": "@clubmed/root",
   "version": "1.13.5",
   "description": "",
-  "main": "index.js",
-  "private": true,
+  "author": "Digital API Team",
+  "license": "SEE LICENSE IN LICENSE",
   "repository": {
+    "type": "git",
     "url": "https://github.com/ClubMediterranee/swagger.git"
   },
-  "dependencies": {
-    "brace": "0.11.1",
-    "classnames": "2.2.6",
-    "cross-env": "5.2.0",
-    "jsoneditor": "9.1.5",
-    "jsoneditor-react": "3.1.0",
-    "lerna": "3.15.0",
-    "lodash": "4.17.19",
-    "lucene-filter": "0.1.3",
-    "lucene-query-parser": "1.2.0",
-    "moment": "2.24.0",
-    "normalize.css": "4.1.1",
-    "prop-types": "15.7.2",
-    "react": "16.13.1",
-    "react-app-polyfill": "1.0.1",
-    "react-copy-to-clipboard": "5.0.2",
-    "react-dom": "16.13.1",
-    "request": "2.88.0",
-    "request-promise-native": "1.0.7",
-    "swagger-ui-react": "3.34.0"
+  "bugs": {
+    "url": "https://github.com/ClubMediterranee/swagger/issues"
   },
-  "devDependencies": {
-    "babel-eslint": "10.0.3",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.2",
-    "enzyme-to-json": "3.4.4",
-    "eslint": "6.1.0",
-    "eslint-config-react-app": "5.0.2",
-    "eslint-config-standard": "12.0.0",
-    "eslint-import-resolver-lerna": "1.1.0",
-    "eslint-loader": "3.0.0",
-    "eslint-plugin-cypress": "2.6.0",
-    "eslint-plugin-flowtype": "3.13.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-mocha": "5.3.0",
-    "eslint-plugin-node": "9.1.0",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "1.6.1",
-    "eslint-plugin-should-promised": "2.0.0",
-    "eslint-plugin-standard": "4.0.0",
-    "fs-extra": "7.0.1",
-    "http-proxy-middleware": "1.0.3",
-    "husky": "1.3.1",
-    "jest-junit": "11.0.1",
-    "junit": "^1.4.9",
-    "lint-staged": "8.2.0",
-    "redux-mock-store": "1.5.4"
-  },
+  "homepage": "https://github.com/ClubMediterranee/swagger#readme",
+  "private": true,
   "workspaces": {
     "packages": [
       "packages/*"
+    ],
+    "nohoist": [
+      "**/shortid/**",
+      "**/striptags/**",
+      "**/brace/**",
+      "**/classnames/**",
+      "**/jsoneditor/**",
+      "**/jsoneditor-react/**",
+      "**/lucene-filter/**",
+      "**/lucene-query-parser/**",
+      "**/moment/**",
+      "**/normalize.css/**",
+      "**/prop-types/**",
+      "**/react-app-polyfill/**",
+      "**/react-copy-to-clipboard/**",
+      "**/react-dom/**",
+      "**/swagger-ui-reac/**",
+      "**/babel-eslint/**"
     ]
+  },
+  "engine-strict": true,
+  "engines": {
+    "node": "12.16.1"
   },
   "scripts": {
     "build": "yarn build:features && yarn build:swagger",
     "build:swagger": "cross-env PUBLIC_URL=${BASE_URL}/swagger-ui lerna run build --stream --scope @clubmed/swagger-ui",
     "build:features": "lerna run build --stream --scope @clubmed/features-and-fix",
     "start:swagger": "lerna run start --stream --no-prefix --scope @clubmed/swagger-ui",
+    "start:features": "lerna run start --stream --no-prefix --scope @clubmed/features-and-fix",
+    "start:tailwind": "lerna run start --stream --no-prefix --scope @clubmed/tailwind",
     "test": "cross-env CI=true lerna run test --concurrency 2 -- --passWithNoTests",
     "test:ci": "cross-env CI=true lerna run test:ci --concurrency 2 -- --passWithNoTests",
     "lint:fix": "lerna run lint:fix --parallel",
@@ -76,8 +56,33 @@
     "release": "cmrelease",
     "release:dryrun": "cmrelease --dry-run"
   },
-  "author": "Lenzotti Romain",
-  "license": "ISC",
+  "dependencies": {
+    "@clubmed/components": "1.13.5",
+    "lerna": "3.15.0"
+  },
+  "devDependencies": {
+    "cross-env": "5.2.0",
+    "eslint": "7.15.0",
+    "eslint-config-react-app": "6.0.0",
+    "eslint-config-standard": "16.0.2",
+    "eslint-import-resolver-lerna": "2.0.0",
+    "eslint-loader": "4.0.2",
+    "eslint-plugin-flowtype": "5.2.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-mocha": "8.0.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-should-promised": "2.0.0",
+    "eslint-plugin-standard": "5.0.0",
+    "fs-extra": "9.0.1",
+    "husky": "4.3.5",
+    "jest-junit": "12.0.0",
+    "junit": "^1.4.9",
+    "lint-staged": "10.5.3"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
