--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -6,7 +6,28 @@
   "dependencies": {
     "@clubmed/webpack": "1.13.5",
     "shortid": "^2.2.15",
-    "striptags": "3.1.1"
+    "striptags": "3.1.1",
+    "brace": "0.11.1",
+    "classnames": "2.2.6",
+    "jsoneditor": "9.1.5",
+    "jsoneditor-react": "3.1.0",
+    "lucene-filter": "0.1.3",
+    "lucene-query-parser": "1.2.0",
+    "moment": "2.24.0",
+    "normalize.css": "4.1.1",
+    "prop-types": "15.7.2",
+    "react-app-polyfill": "1.0.1",
+    "react-copy-to-clipboard": "5.0.2",
+    "swagger-ui-react": "3.34.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "10.1.0",
+    "cross-env": "7.0.3",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
+    "enzyme-to-json": "3.4.4",
+    "http-proxy-middleware": "1.0.3",
+    "redux-mock-store": "1.5.4"
   },
   "scripts": {
     "start": "cross-env PORT=3004 BROWSER=none cm-scripts start",
