--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@clubmed/storybook",
   "version": "1.13.5",
-  "description": "Shared react components",
+  "description": "Storybook documentation",
   "main": "src/index.js",
   "author": "CLUBMED",
   "license": "UNLICENSED",
@@ -11,24 +11,25 @@
     "build:storybook": "build-storybook -c .storybook -o .out"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.2",
     "@clubmed/webpack": "1.13.5",
-    "@storybook/addon-actions": "5.1.9",
-    "@storybook/addon-backgrounds": "5.1.9",
-    "@storybook/addon-centered": "5.1.9",
-    "@storybook/addon-knobs": "5.1.9",
-    "@storybook/addon-links": "5.1.9",
-    "@storybook/addon-notes": "5.1.9",
-    "@storybook/addon-storyshots": "5.1.9",
-    "@storybook/addon-storysource": "5.1.9",
-    "@storybook/addon-viewport": "5.1.9",
-    "@storybook/addons": "5.1.9",
-    "@storybook/react": "5.1.9",
-    "@svgr/webpack": "4.3.3",
+    "@sambego/storybook-state": "2.0.1",
+    "@storybook/addon-actions": "6.1.11",
+    "@storybook/addon-backgrounds": "6.1.11",
+    "@storybook/addon-essentials": "6.1.11",
+    "@storybook/addon-centered": "5.3.21",
+    "@storybook/addon-knobs": "6.1.11",
+    "@storybook/addon-links":"6.1.11",
+    "@storybook/addon-notes": "5.3.21",
+    "@storybook/addon-storyshots": "6.1.11",
+    "@storybook/addon-storysource": "6.1.11",
+    "@storybook/addon-viewport": "6.1.11",
+    "@storybook/addons": "6.1.11",
+    "@storybook/react": "6.1.11",
+    "@svgr/webpack": "5.5.0",
     "babel-loader": "8.0.6",
     "cross-env": "5.2.0",
-    "react-storybook-addon-chapters": "3.1.4",
     "react-svg": "10.0.23",
-    "storybook-addon-rtl": "0.1.2",
     "url-loader": "2.2.0"
   },
   "dependencies": {
