--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -16,94 +16,107 @@
     "cm-scripts": "./bin/cm-scripts.js"
   },
   "scripts": {
-    "build:tailwind": "tailwind build styles/tailwind.css -o dist/tailwind.css"
+    "lint:fix": "yarn lint --fix",
+    "lint": "eslint --config .eslintrc --cache --quiet \"**/*.{js,jsx}\""
+  },
+  "dependencies": {
+    "@clubmed/eslint-config": "1.7.1",
+    "@clubmed/tailwind": "1.13.5",
+    "lodash": "4.17.20"
   },
   "devDependencies": {
-    "@babel/core": "7.6.0",
+    "@babel/core": "7.12.9",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-react-jsx-self": "^7.2.0",
     "@babel/plugin-transform-react-jsx-source": "^7.5.0",
-    "@svgr/webpack": "4.3.2",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "24.9.0",
-    "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+    "@svgr/webpack": "5.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "@tailwindcss/postcss7-compat": "2.0.2",
+    "babel-eslint": "^11.0.0-beta.2",
+    "babel-jest": "26.6.3",
+    "babel-loader": "8.2.2",
+    "babel-plugin-named-asset-import": "^0.3.6",
     "babel-plugin-require-context-hook": "1.0.0",
-    "babel-preset-react-app": "^9.0.2",
-    "camelcase": "^5.2.0",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "chalk": "2.4.2",
-    "css-loader": "2.1.1",
-    "cssnano": "4.1.10",
-    "dotenv": "6.2.0",
+    "babel-preset-react-app": "^10.0.0",
+    "bfj": "^7.0.2",
+    "camelcase": "^6.1.0",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "chalk": "4.1.0",
+    "css-loader": "3.5.3",
+    "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^6.1.0",
-    "eslint-config-react-app": "^5.0.2",
-    "eslint-loader": "3.0.2",
-    "eslint-plugin-flowtype": "3.13.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "fibers": "5.0.0",
-    "file-loader": "3.0.1",
-    "find-up": "3.0.0",
-    "fs-extra": "8.1.0",
-    "glob": "7.1.5",
-    "html-webpack-plugin": "4.0.0-beta.5",
+    "eslint": "7.15.0",
+    "eslint-config-react-app": "6.0.0",
+    "eslint-plugin-flowtype": "5.2.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.1.0",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-testing-library": "3.9.2",
+    "eslint-webpack-plugin": "2.1.0",
+    "file-loader": "6.1.1",
+    "find-up": "5.0.0",
+    "fs-extra": "9.0.1",
+    "glob": "7.1.6",
+    "handlebars-loader": "1.7.1",
+    "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
-    "is-wsl": "^1.1.0",
-    "jest": "24.9.0",
-    "jest-environment-jsdom-fourteen": "0.1.0",
-    "jest-localstorage-mock": "2.4.0",
-    "jest-resolve": "24.9.0",
-    "jest-watch-typeahead": "0.4.0",
-    "mini-css-extract-plugin": "0.8.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "pnp-webpack-plugin": "1.5.0",
+    "is-wsl": "^2.1.1",
+    "jest": "26.6.3",
+    "jest-circus": "26.6.0",
+    "jest-environment-jsdom-fourteen": "1.0.1",
+    "jest-localstorage-mock": "2.4.3",
+    "jest-resolve": "26.6.2",
+    "jest-watch-typeahead": "0.6.1",
+    "mini-css-extract-plugin": "1.3.2",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "pnp-webpack-plugin": "1.6.4",
+    "postcss": "7.0.35",
+    "autoprefixer": "9.8.6",
     "postcss-apply": "0.12.0",
     "postcss-at-rules-variables": "^0.1.9",
-    "postcss-calc": "^7.0.4",
+    "postcss-calc": "7.0.5",
     "postcss-color-function": "4.1.0",
     "postcss-each": "0.10.0",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-for": "2.1.1",
+    "postcss-flexbugs-fixes": "4.2.0",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-mixins": "^6.2.3",
-    "postcss-normalize": "7.0.1",
+    "postcss-normalize": "9.0.0",
     "postcss-omit-import-tilde": "1.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-reporter": "^6.0.1",
-    "postcss-safe-parser": "4.0.1",
-    "react-app-polyfill": "1.0.1",
-    "react-dev-utils": "9.1.0",
-    "react-svg": "10.0.23",
-    "resolve-url-loader": "3.1.0",
+    "postcss-safe-parser": "4.0.2",
+    "prompts": "2.4.0",
+    "react": "16.14.0",
+    "react-app-polyfill": "2.0.0",
+    "react-dev-utils": "11.0.1",
+    "react-refresh": "^0.8.3",
+    "react-svg": "11.1.4",
+    "resolve": "1.19.0",
+    "resolve-url-loader": "3.1.2",
     "sass": "1.29.0",
     "sass-loader": "10.1.0",
-    "semver": "6.3.0",
-    "style-loader": "1.0.0",
-    "tailwind": "4.0.0",
-    "tailwindcss": "1.1.3",
-    "tailwindcss-inset": "1.0.0",
-    "tailwindcss-transforms": "2.2.0",
-    "terser-webpack-plugin": "1.4.1",
-    "ts-pnp": "1.1.4",
-    "url-loader": "2.1.0",
-    "webpack": "4.41.0",
-    "webpack-dev-server": "3.2.1",
-    "webpack-manifest-plugin": "2.1.1",
-    "workbox-webpack-plugin": "4.3.1"
+    "semver": "7.3.4",
+    "style-loader": "1.3.0",
+    "terser-webpack-plugin": "4.2.3",
+    "ts-pnp": "1.2.0",
+    "url-loader": "4.1.1",
+    "web-vitals": "^0.2.4",
+    "webpack": "4.44.2",
+    "webpack-dev-server": "3.11.0",
+    "webpack-manifest-plugin": "2.2.0",
+    "workbox-webpack-plugin": "5.1.4"
   },
   "optionalDependencies": {
     "fsevents": "2.0.7"
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      "> 1%, last 2 versions, ie 11, iOS >=9",
       "not dead",
       "not op_mini all"
     ],
