--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,29 @@
 version: 2.1
 orbs:
-  node: circleci/node@3.0.1
+  node: circleci/node@4.7.0
+
+executors:
+  app-executor:
+    docker:
+      - image: cimg/node:14.18.1
+    resource_class: large
 
 commands:
+  configure-executor:
+    steps:
+      - setup_remote_docker:
+          version: 19.03.13
+      - checkout
   yarn-install:
     description: "Yarn install with cache optimization"
     steps:
-      - node/install:
-          install-yarn: true
-          node-version: 12.16.1
       - node/install-packages:
           pkg-manager: yarn
-      - run: node --version
-      - run: npm --version
-      - run: yarn --version
+  workspace-restore:
+    description: "Restore workspace"
+    steps:
+      - attach_workspace:
+          at: .
   cmflow-install:
     description: "Install CmFlow for the job"
     steps:
@@ -23,15 +33,35 @@ commands:
       - run:
           name: Reset package.json
           command: git checkout -- package.json
+
 jobs:
-  test:
-    machine: true
+  install:
+    executor: app-executor
     steps:
-      - checkout
+      - configure-executor
       - yarn-install
+      - persist_to_workspace:
+          root: .
+          paths:
+            - node_modules
+            - packages/*/node_modules
+  lint:
+    executor: app-executor
+    steps:
+      - configure-executor
+      - workspace-restore
       - run:
           name: Lint
           command: yarn lint:ci
+      - store_test_results:
+          path: reports
+      - store_artifacts:
+          path: ./reports
+  test:
+    executor: app-executor
+    steps:
+      - configure-executor
+      - workspace-restore
       - run:
           name: Unit test
           command: yarn test:ci
@@ -40,22 +70,29 @@ jobs:
       - store_artifacts:
           path: ./reports
   deploy:
-    machine: true
+    executor: app-executor
     environment:
       BASE_URL: "https://clubmediterranee.github.io/swagger/latest"
       GITHUB_PAGES_PATH: "./dist"
     steps:
-      - checkout
-      - yarn-install
+      - configure-executor
+      - workspace-restore
       - cmflow-install
       - run: yarn release
 
 workflows:
   build:
     jobs:
-      - test
+      - install
+      - lint:
+          requires:
+            - install
+      - test:
+          requires:
+            - install
       - deploy:
           requires:
+            - lint
             - test
           filters:
             branches:
