--- a/package.json
+++ b/package.json
@@ -31,24 +31,23 @@
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@storybook/test-runner": "^0.10.0",
-    "@swc/core": "^1.3.55",
-    "@swc/jest": "^0.2.26",
-    "@testing-library/dom": "^9.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.1",
+    "@testing-library/dom": "9.3.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.5.1",
+    "@types/jest": "^29.5.5",
     "@types/node": "^18.15.11",
     "cross-env": "^7.0.3",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-coverage-thresholds-bumper": "^1.1.0",
     "jest-environment-jsdom": "^29.5.0",
-    "jest-junit": "^16.0.0",
+    "jest-junit": "16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "^13.2.2",
     "rimraf": "^5.0.0",
     "semantic-release": "^21.0.1",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2"
   },
