--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,14 +3,32 @@
   "private": true,
   "version": "1.13.7",
   "main": "package.json",
+  "scripts": {
+    "test": "yarn jest --coverage",
+    "test:ci": " yarn test --ci --reporters=default --reporters=jest-junit --max-workers=2 && yarn test:coverage:update",
+    "test:coverage:update": "jest-coverage-thresholds-bumper",
+    "lint": "yarn eslint --config .eslintrc.js --cache --quiet \"./src/**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "yarn lint --fix",
+    "lint:ci": "yarn lint --format junit --output-file ../../reports/test-results-app-lint.xml"
+  },
   "dependencies": {
+    "@clubmed/workspace": "1.13.7",
+    "@juggle/resize-observer": "^3.4.0",
     "@react-spring/web": "^9.7.3",
     "classnames": "^2.3.2",
     "react-spring": "^9.7.3",
     "use-boop": "^1.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "9.3.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.5.1",
+    "@types/jest": "^29.5.5",
+    "@types/jest-axe": "^3.5.6",
     "autoprefixer": "^10.4.16",
+    "jest": "^29.7.0",
+    "jest-coverage-thresholds-bumper": "^1.0.0",
     "postcss": "^8.4.22",
     "tailwindcss": "^3.3.1"
   }
