--- a/packages/workspace/package.json
+++ b/packages/workspace/package.json
@@ -1,4 +1,10 @@
 {
   "name": "@clubmed/workspace",
-  "version": "1.210.3"
+  "version": "1.13.7",
+  "devDependencies": {
+    "change-case": "^5.0.2",
+    "jest": "^29.7.0",
+    "jest-axe": "^8.0.0",
+    "jest-transform-stub": "^2.0.0"
+  }
 }
