--- a/packages/swagger-ui-v3/package.json
+++ b/packages/swagger-ui-v3/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@clubmed/ui": "1.13.7",
     "@types/swagger-ui-react": "4.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "swagger-ui-react": "5.4.2"
   },
   "devDependencies": {
