--- a/packages/swagger-ui-v3/package.json
+++ b/packages/swagger-ui-v3/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "@clubmed/ui": "1.13.7",
     "@types/swagger-ui-react": "4.1.1",
+    "history": "^5.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router": "6.16.0",
+    "react-router-dom": "^6.16.0",
     "swagger-ui-react": "5.4.2"
   },
   "devDependencies": {
