feat(ui): improve components

--- a/package.json
+++ b/package.json
@@ -54,6 +54,10 @@
   "workspaces": [
     "packages/*"
   ],
+  "resolutions": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
