--- a/packages/swagger-ui-v3/package.json
+++ b/packages/swagger-ui-v3/package.json
@@ -18,8 +18,9 @@
     "swagger-ui-react": "5.4.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@types/lodash": "^4.14.199",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
     "@vitejs/plugin-react": "^1.0.7",
     "tailwindcss": "^3.3.1",
     "typescript": "5.2.2",
