--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,6 +15,7 @@
     "@clubmed/workspace": "1.13.7",
     "@juggle/resize-observer": "^3.4.0",
     "@react-spring/web": "^9.7.3",
+    "choices.js": "^10.1.2",
     "classnames": "^2.3.2",
     "react-spring": "^9.7.3",
     "use-boop": "^1.0.0"
