--- a/packages/swagger-ui-v3/package.json
+++ b/packages/swagger-ui-v3/package.json
@@ -4,7 +4,7 @@
   "version": "1.15.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --base 'https://clubmediterranee.github.io/swagger/latest'",
     "preview": "vite preview"
   },
   "files": [
@@ -20,17 +20,16 @@
   },
   "dependencies": {
     "@clubmed/ui": "1.13.7",
-    "@types/swagger-ui-react": "4.1.1",
+    "@types/swagger-ui-react": "4.18.1",
     "history": "^5.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.2",
     "react-router": "6.16.0",
     "react-router-dom": "^6.16.0",
-    "swagger-ui-react": "5.4.2"
+    "swagger-ui-react": "5.9.0"
   },
   "devDependencies": {
-    "@laynezh/vite-plugin-lib-assets": "^0.5.6-beta.0",
     "@types/lodash": "^4.14.199",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
