--- a/packages/swagger-ui-v3/package.json
+++ b/packages/swagger-ui-v3/package.json
@@ -4,7 +4,7 @@
   "version": "1.15.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build --base 'https://clubmediterranee.github.io/swagger/latest'",
+    "build": "tsc && vite build --base 'https://clubmediterranee.github.io/swagger/latest/swagger-ui-v3'",
     "preview": "vite preview"
   },
   "files": [
