fix(swagger-ui-v3): install packages

--- a/packages/swagger-ui-v3/package.json
+++ b/packages/swagger-ui-v3/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build --base 'https://clubmediterranee.github.io/swagger/latest/swagger-ui-v3'",
+    "build:dev": "tsc && vite build --base 'http://localhost:3000/latest/swagger-ui-v3'",
     "preview": "vite preview"
   },
   "files": [
