--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lint-staged": "^13.2.2",
     "rimraf": "^5.0.0",
     "semantic-release": "^21.0.1",
+    "serve": "^14.2.1",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2"
