--- a/packages/swagger-ui-v3/package.json
+++ b/packages/swagger-ui-v3/package.json
@@ -37,6 +37,7 @@
     "@types/lodash": "^4.14.199",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
+    "@types/remarkable": "^2.0.7",
     "@vitejs/plugin-react": "^1.0.7",
     "tailwindcss": "^3.3.1",
     "typescript": "5.2.2",
