--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,16 +1,10 @@
-enableImmutableInstalls: false
+compressionLevel: mixed
+
 enableGlobalCache: true
+
+enableImmutableInstalls: false
+
 nodeLinker: node-modules
-
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
-  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: "@yarnpkg/plugin-version"
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: "@yarnpkg/plugin-interactive-tools"
-
-yarnPath: .yarn/releases/yarn-3.6.0.cjs
 
 supportedArchitectures:
   cpu:
@@ -21,3 +15,5 @@ supportedArchitectures:
     - current
     - darwin
     - linux
+
+yarnPath: .yarn/releases/yarn-4.1.1.cjs
