ci: configure workspace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 executors:
   app-executor:
     docker:
-      - image: cimg/node:18.17.1
+      - image: cimg/node:20.11.0
     resource_class: large
 
 commands:
@@ -16,23 +16,23 @@ commands:
           pkg-manager: yarn
 
 jobs:
-#  lint:
-#    executor: app-executor
-#    steps:
-#      - configure-executor
-#      - workspace-restore
-#      - run:
-#          name: Lint
-#          command: yarn lint:ci
-#      - store_test_results:
-#          path: reports
-#      - store_artifacts:
-#          path: ./reports
+  lint:
+    executor: app-executor
+    steps:
+      - checkout
+      - yarn-install
+      - run:
+          name: Lint
+          command: yarn lint
+      - store_test_results:
+          path: reports
+      - store_artifacts:
+          path: ./reports
   test:
     executor: app-executor
     steps:
-      - configure-executor
-      - workspace-restore
+      - checkout
+      - yarn-install
       - run:
           name: Unit test
           command: yarn test:ci
@@ -44,7 +44,7 @@ jobs:
     executor: app-executor
     environment:
       BASE_URL: "https://clubmediterranee.github.io/swagger/latest"
-#      GITHUB_PAGES_PATH: "./dist"
+    #      GITHUB_PAGES_PATH: "./dist"
     steps:
       - checkout
       - yarn-install
@@ -60,18 +60,13 @@ jobs:
 workflows:
   build:
     jobs:
-#      - install
-#      - lint:
-#          requires:
-#            - install
-#      - test:
-#          requires:
-#            - install
+      - lint
+      - test
       - deploy:
-#          requires:
-#            - lint
-#            - test
-#          filters:
-#            branches:
-#              only: /^master$/
+          requires:
+            - lint
+            - test
+          filters:
+            branches:
+              only: /^release-v3/
           context: api
