fix: breaking change
BREAKING CHANGE: new swagger doc is based on Trident UI and vite bundler

--- a/.gflowrc
+++ b/.gflowrc
@@ -1,8 +1,8 @@
 {
   "flow": "gflow",
   "remote": "origin",
-  "develop": "release-v3",
-  "production": "release-v3",
+  "develop": "main",
+  "production": "main",
   "ignores": [],
   "syncAfterFinish": false,
   "postFinish": "",
