--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ name: Build
 on:
   push:
   pull_request:
-    branches: [release-v3]
+    branches: [main]
     types: [opened, synchronize, closed]
 
 permissions:
@@ -60,7 +60,6 @@ jobs:
     needs: [test, lint]
     if: github.event_name != 'pull_request' && contains('
       refs/heads/main
-      refs/heads/release-v3
       refs/heads/alpha
       refs/heads/beta
       refs/heads/rc
