--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
   },
   "flow": {
     "branch": {
-      "develop": "release-v3",
-      "production": "release-v3"
+      "develop": "main",
+      "production": "main"
     },
     "bumpMethod": "cmflow"
   },
