--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prepare": "is-ci || husky install"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "nx": "18.0.8"
   },
   "devDependencies": {
