--- a/packages/swagger-ui-v3/tsconfig.app.json
+++ b/packages/swagger-ui-v3/tsconfig.app.json
@@ -2,10 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "types": [
-      "node",
-      "vite/client"
-    ]
+    "types": ["node", "vite/client"]
   },
   "exclude": [
     "src/**/*.spec.ts",
