--- a/packages/ui/tsconfig.spec.json
+++ b/packages/ui/tsconfig.spec.json
@@ -2,14 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "types": [
-      "vitest/globals",
-      "vitest/importMeta",
-      "vite/client",
-      "@testing-library/jest-dom",
-      "node",
-      "vitest"
-    ]
+    "types": ["vitest/globals", "vitest/importMeta", "vite/client", "@testing-library/jest-dom", "node", "vitest"]
   },
   "include": [
     "vite.config.ts",
