--- a/packages/storybook/tsconfig.json
+++ b/packages/storybook/tsconfig.json
@@ -4,9 +4,6 @@
     "strict": true,
     "noEmit": true
   },
-  "include": [
-    ".storybook",
-    "tailwind.config.ts"
-  ],
+  "include": [".storybook", "tailwind.config.ts"],
   "extends": "../../tsconfig.base.json"
 }
