--- a/packages/swagger-ui-standalone-v3/package.json
+++ b/packages/swagger-ui-standalone-v3/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@clubmed/swagger-ui-v3",
+  "name": "@clubmed/swagger-ui-standalone-v3",
   "private": true,
   "version": "1.19.0",
   "scripts": {
-    "dev": "vite --port 5173",
+    "dev": "vite --port 5174",
     "build": "tsc && vite build --base 'https://clubmediterranee.github.io/swagger/latest/swagger-ui-v3'",
     "build:dev": "tsc && vite build --base 'http://localhost:3000/latest/swagger-ui-v3'",
     "preview": "vite preview"
