--- a/packages/swagger-ui-plugins/package.json
+++ b/packages/swagger-ui-plugins/package.json
@@ -1,26 +1,15 @@
 {
-  "name": "@clubmed/swagger-ui-v3",
+  "name": "@clubmed/swagger-ui-plugins",
   "private": true,
-  "version": "1.19.0",
+  "version": "1.18.0",
+  "main": "package.json",
+  "type": "module",
   "scripts": {
-    "dev": "vite --port 5173",
-    "build": "tsc && vite build --base 'https://clubmediterranee.github.io/swagger/latest/swagger-ui-v3'",
-    "build:dev": "tsc && vite build --base 'http://localhost:3000/latest/swagger-ui-v3'",
-    "preview": "vite preview"
-  },
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/swagger-ui-v3.umd.js",
-  "module": "./dist/swagger-ui-v3.es.js",
-  "exports": {
-    ".": {
-      "import": "./dist/swagger-ui-v3.es.js",
-      "require": "./dist/swagger-ui-v3.umd.js"
-    }
+    "build": "tsc --build",
+    "test": "vitest run",
+    "test:ci": "vitest run --reporter=default --reporter=junit"
   },
   "dependencies": {
-    "@clubmed/swagger-ui-plugins": "workpace:*",
     "@clubmed/trident-ui": "1.0.0-beta.14",
     "@clubmed/ui": "workspace:*",
     "@types/swagger-ui-react": "4.18.1",
