--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "url": "https://github.com/ClubMediterranee/swagger.git"
   },
   "scripts": {
-    "build": "yarn build:swagger:v3 && yarn build:swagger:standalone:v3",
+    "build": "yarn build:swagger:v3 && yarn build:swagger:standalone:v3 && nx build @clubmed/feature-and-fix-v2",
     "build:swagger:v3": "nx build @clubmed/swagger-ui-v3",
     "build:swagger:standalone:v3": "nx build @clubmed/swagger-ui-standalone-v3",
+    "build:feature-and-fix": "nx build @clubmed/feature-and-fix-v2",
     "test": "vitest run",
     "test:ci": "nx run-many --target=test:ci --all",
     "lint": "eslint 'packages/**/*.{ts,js,tsx,jsx}'",
