--- a/packages/swagger-ui-plugins/package.json
+++ b/packages/swagger-ui-plugins/package.json
@@ -22,9 +22,14 @@
     "react-intersection-observer": "^9.10.3",
     "react-router": "6.24.0",
     "react-router-dom": "6.24.0",
-    "remark-highlight.js": "7.0.1",
-    "remarkable": "2.0.1",
-    "swagger-ui-react": "5.17.14"
+    "rehype-highlight": "7.0.0",
+    "rehype-stringify": "10.0.0",
+    "remark": "15.0.1",
+    "remark-directive": "3.0.0",
+    "remark-gfm": "4.0.0",
+    "remark-rehype": "11.1.0",
+    "swagger-ui-react": "5.17.14",
+    "unified": "11.0.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.6",
