--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,9 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+#concurrency:
+#  group: "pages"
+#  cancel-in-progress: false
 
 jobs:
   lint:
