--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
   ],
   "resolutions": {
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "@storybook/csf": "0.1.11"
   },
   "husky": {
     "hooks": {
