--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -4,25 +4,30 @@
   "type": "module",
   "devDependencies": {
     "@mdx-js/react": "^1.6.22",
-    "@storybook/addon-a11y": "^7.6.20",
-    "@storybook/addon-actions": "^7.6.20",
-    "@storybook/addon-docs": "^7.6.20",
-    "@storybook/addon-essentials": "^7.6.20",
-    "@storybook/addon-interactions": "^7.6.20",
-    "@storybook/addon-links": "^7.6.20",
-    "@storybook/addon-mdx-gfm": "^7.6.20",
+    "@storybook/addon-a11y": "^8.1.11",
+    "@storybook/addon-actions": "^8.1.11",
+    "@storybook/addon-docs": "^8.1.11",
+    "@storybook/addon-essentials": "^8.1.11",
+    "@storybook/addon-interactions": "^8.1.11",
+    "@storybook/addon-links": "^8.1.11",
+    "@storybook/addon-mdx-gfm": "^8.1.11",
     "@storybook/addon-styling": "^1.3.7",
-    "@storybook/addon-viewport": "^7.6.20",
-    "@storybook/blocks": "^7.6.20",
-    "@storybook/react": "^7.6.20",
-    "@storybook/react-vite": "^7.6.20",
-    "@storybook/test": "^7.6.20",
-    "@storybook/testing-library": "^0.2.2",
-    "storybook": "1.22.0"
+    "@storybook/addon-viewport": "^8.1.11",
+    "@storybook/blocks": "^8.1.11",
+    "@storybook/csf": "0.1.11",
+    "@storybook/csf-tools": "^8.1.11",
+    "@storybook/react": "^8.1.11",
+    "@storybook/react-vite": "^8.1.11",
+    "@storybook/test": "^8.1.11",
+    "@storybook/test-runner": "0.19.0",
+    "playwright": "1.45.1",
+    "storybook": "^8.1.11"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook:build": "storybook build",
+    "storybook:test": "yarn test-storybook",
+    "storybook:test:ci": "yarn test-storybook --maxWorkers=2"
   },
   "version": "1.22.0"
 }
