--- a/packages/storybook/tsconfig.json
+++ b/packages/storybook/tsconfig.json
@@ -1,9 +1,11 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "rootDir": ".",
     "jsx": "react-jsx",
     "strict": true,
     "noEmit": true
   },
-  "include": [".storybook", "tailwind.config.ts"],
-  "extends": "../../tsconfig.base.json"
+  "include": ["stories", "./.storybook/**/*", "."],
+  "exclude": ["node_modules"]
 }
