fix: replace Choices.js by react-select

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,10 +70,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "yarn"
-      - name: Install Playwright 🚀
-        run: npx playwright install --with-deps
       - name: Install dependencies 🚀
         run: yarn install --immutable
+      - name: Install Playwright 🚀
+        run: yarn dlx playwright install
       - name: Build Storybook
         run: yarn build:storybook --quiet
       - name: Serve Storybook and run tests 🔍
