--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -19,8 +19,7 @@
     "@storybook/react": "^8.2.1",
     "@storybook/react-vite": "^8.2.1",
     "@storybook/test": "^8.2.1",
-    "@storybook/test-runner": "0.19.0",
-    "playwright": "1.46.0",
+    "@storybook/test-runner": "^0.19.1",
     "storybook": "^8.2.1"
   },
   "scripts": {
