--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "nx": "18.3.5"
   },
   "devDependencies": {
-    "@clubmed/trident-ui": "1.0.0-beta.18",
+    "@clubmed/trident-icons": "1.3.1",
+    "@clubmed/trident-ui": "1.2.0",
     "@cmflow/cli": "1.0.12",
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
