--- a/packages/features-and-fix-v2/package.json
+++ b/packages/features-and-fix-v2/package.json
@@ -20,7 +20,7 @@
     }
   },
   "dependencies": {
-    "@clubmed/trident-ui": "1.0.0-beta.18",
+    "@clubmed/trident-ui": "1.2.0",
     "@clubmed/ui": "workspace:*",
     "react": "18.3.1",
     "react-dom": "18.3.1"
