--- a/packages/swagger-ui-v3/package.json
+++ b/packages/swagger-ui-v3/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@clubmed/swagger-ui-plugins": "1.27.1",
-    "@clubmed/trident-ui": "1.0.0-beta.18",
+    "@clubmed/trident-ui": "1.2.0",
     "@clubmed/ui": "workspace:*",
     "@types/swagger-ui-react": "4.18.3",
     "brace": "^0.11.1",
