--- a/packages/swagger-ui-standalone-v3/package.json
+++ b/packages/swagger-ui-standalone-v3/package.json
@@ -23,7 +23,7 @@
     "@clubmed/swagger-ui-plugins": "1.28.0",
     "@clubmed/trident-ui": "1.2.0",
     "@clubmed/ui": "workspace:*",
-    "@types/swagger-ui-react": "4.18.3",
+    "@types/swagger-ui-react": "5.18.0",
     "brace": "^0.11.1",
     "history": "^5.3.0",
     "jsoneditor": "^9.10.5",
@@ -33,9 +33,10 @@
     "react-intersection-observer": "^9.10.3",
     "react-router": "6.24.0",
     "react-router-dom": "6.24.0",
-    "swagger-ui-react": "5.18.3"
+    "swagger-ui-react": "5.24.1"
   },
   "devDependencies": {
+    "@braintree/sanitize-url": "7.1.1",
     "@types/lodash": "^4.17.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
